# SimpleStatusServer

./: README.md  build-and-release.bat  pyproject.toml  requirements.txt  simplestatusserver.py
.github/: FUNDING.yml
reports/: PYLINT.txt
